JavaScriptCore/wrec/WRECParser.h
@@ -40,9 +40,10 @@ namespace JSC { namespace WREC {
 
     struct CharacterClass;
 
-    typedef Generator::JumpList JumpList;
-
     class Parser {
+    typedef Generator::JumpList JumpList;
+    typedef Generator::ParenthesesType ParenthesesType;
+
     public:
         enum Error {
             NoError,
@@ -51,7 +52,6 @@ namespace JSC { namespace WREC {
             MalformedPattern,
             MalformedQuantifier,
             MalformedEscape,
-            UnsupportedQuantifier,
             UnsupportedParentheses,
         };
 
@@ -177,6 +177,7 @@ namespace JSC { namespace WREC {
         ALWAYS_INLINE Quantifier consumeGreedyQuantifier();
         Quantifier consumeQuantifier();
         Escape consumeEscape(bool inCharacterClass);
+        ParenthesesType consumeParenthesesType();
 
         static const int EndOfPattern = -1;
 
